assets/css/screen.css
/* ... */
pre code, tt {
    font-size: inherit;
    white-space: -moz-pre-wrap;
    white-space: pre-wrap;
    background: transparent;
    border: none;
    padding: 0;
}

kbd {
    display: inline-block;
    margin-bottom: 0.4em;
    padding: 1px 8px;
    border: #ccc 1px solid;
    color: #666;
    text-shadow: #fff 0 1px 0;
    font-size: 0.9em;
    font-weight: bold;
    background: #f4f4f4;
    border-radius: 4px;
    box-shadow:
        0 1px 0 rgba(0, 0, 0, 0.2),
        0 1px 0 0 #fff inset;
}

table {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin: 1.6em 0;
    width:100%;
    max-width: 100%;
    background-color: transparent;
}

table th,
table td {
    padding: 8px;
    line-height: 20px;
    text-align: left;
    vertical-align: top;
    border-top: 1px solid #efefef;
}

table th { color: #000; }

table caption + thead tr:first-child th,
table caption + thead tr:first-child td,
table colgroup + thead tr:first-child th,
table colgroup + thead tr:first-child td,
table thead:first-child tr:first-child th,
table thead:first-child tr:first-child td {
    border-top: 0;
}

table tbody + tbody { border-top: 2px solid #efefef; }

table table table { background-color: #fff; }

table tbody > tr:nth-child(odd) > td,
table tbody > tr:nth-child(odd) > th {
    background-color: #f6f6f6;
}

table.plain tbody > tr:nth-child(odd) > td,
table.plain tbody > tr:nth-child(odd) > th {
   background: transparent;
}

iframe, .fluid-width-video-wrapper {
    display: block;
    margin: 1.6em 0;
}

/* When a video is inside the fitvids wrapper, drop the
margin on the iframe, cause it breaks stuff. */
.fluid-width-video-wrapper iframe {
    margin: 0;
}


/* ==========================================================================
   3. Utilities - These things get used a lot
   ========================================================================== */

/* Clears shit */
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}
.clearfix:after { clear: both; }
.clearfix { *zoom: 1; }

/* Hides shit */
.hidden {
    text-indent: -9999px;
    visibility: hidden;
    display: none;
}

/* Creates a responsive wrapper that makes our content scale nicely */
.inner {
    position: relative;
    width: 90%;
    max-width: 780px;
    margin: 0 auto;
}

/* Centres vertically yo. (IE8+) */
.vertical {
    display: table-cell;
    vertical-align: middle;
}

a.fa {
    text-decoration: none;
    color: inherit;
}

.full-img {
    width: 100%;
}

.col-aside {
    width: 20%;
    margin-right: 6%;
}

.btn {
    display: inline-block;
    background-color: #5DADAA;
    padding: 0 8px;
    color: #fff;
    font-size: 1.3rem !important;
    border-radius: 3px;
    text-decoration: none;
}

.btn:hover {
    color: #fff;
    background-color: #333f49;
    transition: background-color 0.5s ease;
}

/* ==========================================================================
   4. General - The main styles for the the theme
   ========================================================================== */

main {
    background-color: #fff;
}

.post-template .inner {
    max-width: 700px;
}

.header-container, .site-head {
    height: 240px;
}

.home-template .header-container, .home-template .site-head {
    height: 400px;
}

.logo {
    height: 80px;
    margin-bottom: 10px;
}

.home-template .logo {
    height: 120px;
    margin-bottom: 20px;
}

.header-container {
    position: relative;
}

.header-text {
    display: table-cell;
    width: 100%;
    height: 100%;
    padding-bottom: 30px;
    text-align: center;
    vertical-align: middle;
}

.site-head {
    display: table;
    width: 100%;
    top: 0;
    background-size: cover;
    color: #fff;
    text-align: center;
    position: fixed;
    z-index: -1;
}

.home-template h1.blog-title {
    font-size: 5.2rem;
    letter-spacing: -1px;
    margin-bottom: 10px;
}

h1.blog-title {
	font-size: 38px;
    font-size: 3.8rem;
    line-height: 1em;
    font-weight: 700;
    letter-spacing: 0.4px;
    margin-bottom: 5px;
}

.blog-description {
	font-size: 19px;
    font-size: 1.9rem;
    letter-spacing: 0.2px;
}

.main-nav {
    position: absolute;
    bottom: 0;
    width: 100%;
	background: rgb(93,173,170);
    background-color: rgba(93,173,170,0.85);
    z-index: 100;
    text-align: center;
}

.main-nav-fixed {
    position: fixed;
    z-index: 100;
    top: 0;
    bottom: auto;
    text-align: right;
}

.main-nav ul {
    padding: 0;
    margin: 0;
    /*margin-right: 4%;*/
    display: inline-block;
}

.main-nav-fixed ul {
    margin-right: 2%;
}

.main-nav li {
    display: inline-block;
    padding: 5px 6px;
}

.main-nav li a {
    color: #fff;
	font-size: 14px;
    font-size: 1.4rem;
	letter-spacing: 0.5px;
	text-decoration: none;
}

.main-nav li a:hover {
    color: #E5DA67;
}

.main-nav .fa {
	margin-right: 2px;
    font-size: 1.6rem;
}

.nav-home-btn {
    line-height: 1;
    padding: 5px 8px 4px;
    background-color: rgb(250,150,150);
    border-radius: 2px;
    letter-spacing: 0.5px;
}

main {
    background-color: #fff;
}

.post-item {
    padding: 60px 0;
    border-top: solid 1px #eaeaea;
}

.post-item:first-child {
    border-top: none;
}

.post-item:nth-child(even) {
    background-color: #f8f8f8;
}

.post-item-title {
	font-size: 28px;
    font-size: 2.8rem;
    line-height: 1.2em;
    letter-spacing: -0.2px;
    font-weight: 300;
    margin-bottom: 20px;
    width: 70%;
}

.col-aside, .post-excerpt, .post-item-title, .author-info {
    display: inline-block;
}

.post-preview > .col-aside {
    vertical-align: top;
}

.post-excerpt {
    width: 70%;
}

.post-excerpt p {
    margin-bottom: 0;
}

.post-excerpt .btn {
    margin-top: 30px;
}

.post-item-time {
    padding-bottom: 2px;
    border-bottom: solid 1px #eaeaea;
}

.post-item-tags {
    display: block;
}

.post-meta {
	font-size: 14px;
    font-size: 1.4rem;
}

.post-meta time {
    display: block;
}
/* ... */

